Left menu filtering: Fixed slight jump when restoring menu items
Also:
- Section colour for userdocs darker for visibility
- Min height for content
- Fixed menu height upon load
- Removed duplicated file

--- a/client/scss/_settings.scss
+++ b/client/scss/_settings.scss
@@ -585,7 +585,7 @@ $nuxeo-server-color: #2196f3;
 $nuxeo-web-ui-color: #3f51b5;
 $nuxeo-desktop-mob-color: #673ab7;
 $nuxeo-addons-color: #9c27b0;
-$nuxeo-user-documentation-color: #bcc2c8;
+$nuxeo-user-documentation-color: #8a8a8a;
 $nuxeo-sdks-color: #ff1744;
 $nuxeo-services-color: #ff6d00;
 $nuxeo-tools-color: #f9a825;
